[project]
name = "agentic-al-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
]
